@@ -3,13 +3,23 @@ Hash: SHA256
 
 AUX libarchive-3.1.2-CVE-2013-0211.patch 1087 SHA256 6e9940a1b148f3ceb43bb172416b332ba922bb951e7832193ff997c2d9026bb4 SHA512 38ef32b30b3eb5a7c68e31086da64b871bae70002600080541ea6d0ea3680f68f9e65760f803a0e96d233e1a21858a83946c1fd63fd67d5eb030120940896c7a WHIRLPOOL 6c9a8586e011a7f392a925261adb9a5b5f8b5a9725b322bd6f8dd56fb3f2bee15b7651c0e6dd3c0a23ddc76c22b84fb6ab041215116076f015ba68aa12ededbe
 DIST libarchive-3.1.2.tar.gz 4527540 SHA256 eb87eacd8fe49e8d90c8fdc189813023ccc319c5e752b01fb6ad0cc7b2c53d5e SHA512 1f3c2a675031f93c7d42ae2ed06742b0b1e2236ff57d9117791d62fb8ae77d6cafffbcb5d45b5bd98daa908bd18c576cf82e01a9b1eba699705e23eff3688114 WHIRLPOOL b90f336afb5264be91fb17d7dae3d5697e3f84e24d276af1d5ac076fe15ef6f5756488f09506fabe470473becb5449cd1f34865309dcf8a914e6e83506e8695f
-EBUILD libarchive-3.1.2-r1.ebuild 2598 SHA256 cb9d4881db35dcc628bd36d67707b807ea03a250b019ea4a72e5e83b65dbae10 SHA512 18fcad4f56b96e20ba27b454c8f43b7eadd2f3a742f336ce7175362d8d3eddbfcbcd78e3dd811405a50ce1ea692e840668266b8814383598982a60cb40c41165 WHIRLPOOL 8c0e66deb4e9b88bb18580043e580dcab9767ab973b17cf3f50baa9e71c238c9d36177cb50984bb4cecda3df6d78bdc2f04e2097539942bf0348bbdd0f750255
-MISC ChangeLog 35557 SHA256 768a7e4ed39d3f3a690a943144449c3a2652805c1cf9753ae9443f3f1b6018be SHA512 4e5521d732d2339a8bcfd387c7e3745145bd7cf80cdf04dc00253bea8a6e8cd9852ce29a510dec82cbf2e92d16fb127afd588f25ed03f5817a807ceefa76aacb WHIRLPOOL c079f298bf273ba26a617b058ff5fa291abd6511b78a826e9b68a93cf762769b8006f8a15ce97288e2d4e98474d6064b38579e385cf510f981dc364146876032
+EBUILD libarchive-3.1.2-r1.ebuild 2608 SHA256 1d7d7b239d5b0f587e305ca8b9e950ba789546673a160646ea3319acb83cb560 SHA512 e471fdb2847670335e1f6acddbe56846e7d6fe381cdf440d86c933d51ac00ea0522485b572ab676ccdddee79413d67f03719fb16e61017bcde369e41c3b23d43 WHIRLPOOL b2fe20e42c9f1e351c6c0b25f55349a77eecd808b3c3a9e691fb545e4e7d31ee07c64226fd1df76139f5abdc957bbf3957331af3687ee7a884c81ffd8f1f1d13
+MISC ChangeLog 35658 SHA256 5d6739081fe3df492178d0522b91f02761d0956ffe6cff8ea716b93519bd0310 SHA512 28edd8ebd92704e8e6388c261b82cbac5ffc33185c8b8666b44cc06b75186036c7e04cde6c7637411f717590aa41350dd588932c1474ceda1c5b9ad23828b02d WHIRLPOOL c7d02fd3c18ecff0ecd32d7865080c096e9469e07b3810c74c5d8894044e8df4088cc8ef8d898d3452cb86d760f59715bb41f58286b8cd4292fb2d8699f8202f
 MISC metadata.xml 1301 SHA256 2cc87bc829db8751ccf9b12057c05539fae80578f0325da9e15c7b4fb15797e1 SHA512 19dc1b85046b7f0da92cb3246c0ee7f58092202ff212a4ee64d27c53f718017f982946ee7db3cd67fff4888b5fa3b4cdd5eae10e5d49c832ffe2e331aa173efe WHIRLPOOL e61bc96069cf9fc659cb07506963885532bf0239646463965fb6840063a6a0b4007e4d4f68e7ce8d29b7c70fed168966a04e1e74de893d19bb45ace6f085c741
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (SunOS)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlHgYCYACgkQX3X2B8XHTokEyQCgon82MnTYGtakLQdOEacrnHYr
-jqsAoIRrHaDBaxU2JPSobQYbATbz5Iy0
-=qlQ6
+iQIcBAEBCAAGBQJTllBEAAoJEPGu1DbS6WIABEsP/20/nBLc7wupOOCvQEMwnlOf
+y41ANsF58cRE1tKsl0zAfILmHuN7hCN9RIcR9OPNVsbGKMhAZ2c1iRsfnieXOAb3
+svvKW2Ff8rFI8RUJ9rw1ShlUxccLxzEijDQGPIKV+qdzXy4NC45/2PlWM50B5ONr
+qP8Qy17jRKBW40WHvpk+Mn2vQB+99ctYM8XPw5G7fmF/p/159CSASH/O0vnBxd6k
+ygwhjTvAi+DYPR1WHujGBassuCmp/VMevjxAxvpjjWSFK/94XMEM336Zq0ZcByJJ
+wvpPU7eNrmS01spoMU2VbtEQS8sZe+W+FZdiUvGCvzENvL1Um5T0KFqVn1fqHf1a
+KFiYYWJrY396hLFrsIUPENUYsd91gWAoRJjjYDxAQboxlmCOMPtRywSLb4H3KxBc
+DmEkX+pJDs3gJR2OFBkd2akERGCxD0dIgsggoqPLe2+awZvO942mKgQQ661LBgVh
+roOjiRmfafEFFO7Rdc0eSmU14casjfKQ6qMfGNz3sBemc8CuXdJVsiA9lxNbdKos
+e5yplgKCcRyVzmQkga6ATfHnsEdkfXkIRsgtoxY5vAwiW5zHIYxWP5eTaQMf/SQE
+qcU7q/gBy644HlVrUH2JAXSj6wkjUD0/igi3K7PEQsc4e1z/YT73UhZAsSo62zuK
+RBttwfexg6HVKgYhBofi
+=qt7c
 -----END PGP SIGNATURE-----
